Fix Modal Overflow

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden;
+}
+
 html, body {
   height: 100%;
   width: 100%;
@@ -65,6 +69,17 @@ html, body {
   -webkit-box-shadow: #000000 3px 3px 3px;
   -moz-box-shadow: #000000 3px 3px 3px;
   box-shadow: #000000 3px 3px 3px;
+  overflow: scroll;
+}
+
+.modal-window::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 5px;
+}
+.modal-window::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0,0,0,.3);
+  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
 
 .modal-text {
